Refactor action card cancel and sabotage logic (#4135)
* Refactor action card cancel and sabotage logic

Introduces helper methods to determine if an action card is cancelable and if it is a Sabotage or Shatter card. Refactors button and message logic to use these helpers, improving clarity and maintainability of action card resolution and sabotage handling.

* Update ActionCardHelper.java

* Standardize spelling to 'canceled' across codebase

Replaced all instances of 'cancelled' with 'canceled' for consistency with American English spelling. Also made minor code style improvements, such as using constant string comparisons and explicit static imports.

* Refactor string comparisons and minor code cleanups

Standardized string comparisons to use constant-first equals and equalsIgnoreCase patterns across multiple files for improved null safety and consistency. Cleaned up imports, improved variable naming, and simplified some logic for clarity.